[workspace]
members = [
    "constraints",
    "data",
    "dtls",
    "examples",
    "ice",
    "interceptor",
    "mdns",
    "media",
    "rtcp",
    "rtp",
    "sctp",
    "sdp",
    "srtp",
    "stun",
    "turn",
    "util",
    "webrtc",
]
resolver = "2"

[profile.dev]
opt-level = 0

[patch.crates-io]
x509-parser = { git = "https://github.com/aggstam/x509-parser", rev = "5132fdc51bfe14406ecbfd6f01a9592dad51eca1" }
